# serialize

./: .gitignore  BUILDING.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  STANDARD.md  bench.cpp  example.cpp  fuzz.cpp  premake5.lua  serialize.h  test.cpp
.github/workflows/: ci.yml  cla.yml  nightly-fuzz.yml  release-check.yml
tools/conformance/: README.md  verify_standard.py
